# arvados

./: .env  .gitignore  .licenseignore  .yarnrc.yml  AUTHORS  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Capfile  Capfile.ant  Changelog  Dockerfile  Gemfile  Makefile  README  README.md  Rakefile  SECURITY.md  apache2_vhost  arv-web-example.py  arvados-google-api-client.gemspec  build.gradle  cc-by-sa-3.0.txt  cypress.json  go.mod  go.sum  google-api-client.gemspec  package.json  run-tests-build.sh  runit.py  settings.gradle  test-in-docker.sh  tsconfig.json  tslint.json  version-at-commit.sh
contrib/arvados-bootstrap/: README.md  pyproject.toml
contrib/arvados-bootstrap/src/arv_bootstrap/: export_import.py  federation_migrate.py  seed.py  stubapi.py
sdk/cwl/: MANIFEST.in  README.rst  arvados_version.py  fpm-info.sh  gittaggers.py  pyproject.toml  setup.py  test_with_arvbox.sh
sdk/cwl/arvados_cwl/: __init__.py  _version.py  arv-cwl-schema-v1.0.yml  arv-cwl-schema-v1.1.yml  arv-cwl-schema-v1.2.yml  arv-cwl-schema.yml  arvcontainer.py  arvdocker.py  arvjob.py  arvtool.py  arvworkflow.py  context.py  crunch_script.py  done.py  executor.py  fsaccess.py  http.py  pathmapper.py  perf.py  runner.py  task_queue.py  util.py
sdk/cwl/tests/: 10380-trailing-slash-dir.cwl  12213-keepref-expr.cwl  12213-keepref-job.yml  12213-keepref-tool.cwl  12213-keepref-wf.cwl  12418-glob-empty-collection.cwl  13931-size-job.yml  13931-size.cwl  13976-keepref-wf.cwl  15241-writable-dir-job.json  15241-writable-dir.cwl  15295-bad-keep-ref.cwl  16169-no-listing-hint.cwl  16377-missing-default.cwl  17004-output-props.cwl  17267-broken-schemas.cwl  17521-dot-slash-glob.cwl  17801-runtime-outdir.cwl  17858-pack-visit-crash.cwl  17879-ignore-sbg-fields-job.yml  17879-ignore-sbg-fields.cwl  18888-download_def.cwl  19070-copy-deps.cwl  19109-upload-secondary.cwl  19109-upload-secondary.yml  19678-name-id.cwl  19678-name-id.yml  22466-output-glob-expressions-secondaryfile.cwl  __init__.py  arvados-tests.sh  arvados-tests.yml  badkeep.yml  cat.cwl  cat2.cwl  conftest.py  container_request_9tee4-xvhdp-kk0ja1cl8b2kr1y-arv-mount.txt  container_request_9tee4-xvhdp-kk0ja1cl8b2kr1y-crunchstat.txt  dir-job.yml  dir-job2.yml  hello.yml  (+32 more)
sdk/cwl/tests/18994-basename/: check.cwl  rename.cwl  wf_ren.cwl  whale.txt
sdk/cwl/tests/22466/: fake.bam  (+1 more)
sdk/python/: .gitignore  MANIFEST.in  README.rst  arvados-v1-discovery.json  arvados.py  arvados_version.py  build.sh  discovery2pydoc.py  fpm-info.sh  gittaggers.py  pyproject.toml  pytest.ini  readme.llfuse  requirements.txt  run_test_server.py  setup.py  setup.py.src  setup_fuse.py  setup_fuse.py.src  setup_header.py  test_cmdline.py  test_collections.py  test_keep_client.py  test_mount.py  test_pipeline_template.py  test_websockets.py
sdk/python/arvados/: Collection.py  Keep.py  Stream.py  __init__.py  _normalize_stream.py  _pycurlhelper.py  _ranges.py  _version.py  api.py  apisetup.py  arvfile.py  cache.py  collection.py  config.py  crunch.py  diskcache.py  errors.py  events.py  fuse.py  http_import.py  http_to_keep.py  keep.py  logging.py  ranges.py  retry.py  safeapi.py  stream.py  timer.py  util.py  vocabulary.py
sdk/python/testdata/: 1000G_ref_manifest
sdk/python/tests/: arvados_testutil.py  conftest.py  editor_simulator.py  keepstub.py  manifest_examples.py  nginx.conf  run_test_server.py  slow_test.py  test_api.py  test_arv-put.py  test_arv_copy.py  test_arv_get.py  test_arv_keepdocker.py  test_arv_ls.py  test_arv_normalize.py  test_arv_put.py  test_arv_run.py  test_arv_ws.py  test_arvcli.py  test_arvfile.py  test_basedirs.py  test_benchmark_collections.py  test_cache.py  test_cmd_util.py  test_collections.py  test_computed_permissions.py  test_config.py  test_crunch.py  test_cwl_job.py  test_errors.py  test_events.py  test_http.py  test_http_cache.py  test_http_to_keep.py  test_internal.py  test_keep_client.py  test_keep_locator.py  test_pipeline_template.py  test_retry.py  test_retry_job_helpers.py  (+9 more)
sdk/rust/arvados-api-generator/: .gitignore  Cargo.toml  arvados-api.json
sdk/rust/arvados-client/: .gitignore  Cargo.toml  build.rs
services/dockercleaner/: MANIFEST.in  README.rst  arvados-docker-cleaner.service  arvados_version.py  fpm-info.sh  pyproject.toml  setup.py
services/dockercleaner/arvados_docker/: cleaner.py
services/dockercleaner/tests/: __init__.py  test_cleaner.py
tools/cluster-activity/: MANIFEST.in  README.rst  arvados_version.py  cluster-activity.cwl  cluster-activity.dockerfile  make_docker.sh  pyproject.toml  pytest.ini  setup.py
tools/cluster-activity/arvados_cluster_activity/: dygraphs.js  main.py  prometheus.py  report.py  reportchart.py  sortable.js  synchronizer.js
tools/cluster-activity/docker/: Dockerfile
tools/cluster-activity/test/: test_report.py
tools/cluster-activity/tests/: test_prometheus.py  test_report.csv  test_report.html  test_report.py
tools/crunchstat-summary/: MANIFEST.in  README.rst  arvados_version.py  fpm-info.sh  gittaggers.py  pyproject.toml  pytest.ini  setup.py
tools/crunchstat-summary/crunchstat_summary/: __init__.py  chartjs.js  chartjs.py  command.py  dygraphs.js  dygraphs.py  reader.py  summarizer.py  synchronizer.js  webchart.py
tools/crunchstat-summary/tests/: container_9tee4-dz642-lymtndkpy39eibk-arv-mount.txt.gz.report  container_9tee4-dz642-lymtndkpy39eibk-crunchstat.txt.gz.report  container_9tee4-dz642-lymtndkpy39eibk.txt.gz.report  container_9tee4-dz642-mjfb0i5hzojp16a-crunchstat.txt.gz.report  container_request_9tee4-xvhdp-kk0ja1cl8b2kr1y-arv-mount.txt.gz.report  container_request_9tee4-xvhdp-kk0ja1cl8b2kr1y-crunchstat.txt.gz.report  crunchstat_error_messages.txt  logfile_20151204190335.txt.gz.report  logfile_20151210063411.txt.gz.report  logfile_20151210063439.txt.gz.report  test_examples.py
tools/python-metapackage/: README.md  arvados_version.py  pyproject.toml  setup.py
tools/user-activity/: README.rst  arv-user-activity.py  arvados_version.py  fpm-info.sh  pyproject.toml  setup.py
tools/user-activity/arvados_user_activity/: __init__.py  main.py
(+7131 files in other folders)
