[package]
name = "arvados_api_generator"
version = "0.1.0"
authors = ["andy-thomason <andy@andythomason.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
regex = { version = "1" }
