[package]
name = "arvados_client"
version = "0.1.0"
authors = ["andy-thomason <andy@andythomason.com>"]
edition = "2018"


[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[build-dependencies]
arvados_api_generator = { path = "../arvados-api-generator/" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = { version = "0.13" }
